tests/snapshots/files__stratified.snap
---
source: tests/files.rs
expression: serialized
---
nodes:
  Unit-0:
    op: ()
    children: []
    eclass: Unit-0
    cost: 0
  i64-5871781006564002453:
    op: "1"
    children: []
    eclass: i64-5871781006564002453
    cost: 0
  i64-11743562013128004906:
    op: "2"
    children: []
    eclass: i64-11743562013128004906
    cost: 0
  edge-7659469028595837896:
    op: edge
    children:
      - i64-5871781006564002453
      - i64-11743562013128004906
    eclass: Unit-0
    cost: 1
  i64-17615343019692007359:
    op: "3"
    children: []
    eclass: i64-17615343019692007359
    cost: 0
  edge-1081172882011038115:
    op: edge
    children:
      - i64-11743562013128004906
      - i64-17615343019692007359
    eclass: Unit-0
    cost: 1
  i64-5040379952546458196:
    op: "4"
    children: []
    eclass: i64-5040379952546458196
    cost: 0
  edge-16275225025205966978:
    op: edge
    children:
      - i64-17615343019692007359
      - i64-5040379952546458196
    eclass: Unit-0
    cost: 1
  i64-10080759905092916392:
    op: "8"
    children: []
    eclass: i64-10080759905092916392
    cost: 0
  edge-11234845072659508782:
    op: edge
    children:
      - i64-17615343019692007359
      - i64-10080759905092916392
    eclass: Unit-0
    cost: 1
  path-16275225025205966978:
    op: path
    children:
      - i64-17615343019692007359
      - i64-5040379952546458196
    eclass: Unit-0
    cost: 1
  path-7659469028595837896:
    op: path
    children:
      - i64-5871781006564002453
      - i64-11743562013128004906
    eclass: Unit-0
    cost: 1
  path-1081172882011038115:
    op: path
    children:
      - i64-11743562013128004906
      - i64-17615343019692007359
    eclass: Unit-0
    cost: 1
  path-13531250035159840349:
    op: path
    children:
      - i64-5871781006564002453
      - i64-17615343019692007359
    eclass: Unit-0
    cost: 1
  path-15318938057191675792:
    op: path
    children:
      - i64-11743562013128004906
      - i64-5040379952546458196
    eclass: Unit-0
    cost: 1
  path-11993333841121498764:
    op: path
    children:
      - i64-11743562013128004906
      - i64-10080759905092916392
    eclass: Unit-0
    cost: 1
root_eclasses: []
class_data:
  Unit-0:
    type: Unit
  i64-5871781006564002453:
    type: i64
  i64-11743562013128004906:
    type: i64
  i64-17615343019692007359:
    type: i64
  i64-5040379952546458196:
    type: i64
  i64-10080759905092916392:
    type: i64

