tests/snapshots/files__string_quotes.snap
---
source: tests/files.rs
expression: serialized
---
nodes:
  String-3508559694726045631:
    op: "\"abc\""
    children: []
    eclass: String-3508559694726045631
    cost: 0
  f-0:
    op: f
    children: []
    eclass: String-3508559694726045631
    cost: 1
root_eclasses: []
class_data:
  String-3508559694726045631:
    type: String

