tests/snapshots/files__subsume.snap
---
source: tests/files.rs
expression: snapshot_content
---
(Mul (Num 2) (Add (Var "x") (Add (Var "x") (Var "x"))))
(Mul (Num 2) (Add (Var "x") (Add (Var "x") (Var "x"))))
Add: 2
Mul: 2
Num: 2
Var: 1
