tests/snapshots/files__test_combined_proof_testing.snap
---
source: tests/files.rs
expression: snapshot_content
---
(Rule
  (= (path 0 1) (path 0 1))
  (name
    "(rule ((edge x y))
      ((path x y))
        :ruleset myrules1 )")
  (premises (Fiat (= (edge 0 1) (edge 0 1))))
  (substitution (x 0) (y 1)))(Rule
  (= (path 0 2) (path 0 2))
  (name
    "(rule ((path x y)
       (edge y z))
      ((path x z))
        :ruleset myrules2 )")
  (premises
    (Rule
      (= (path 0 1) (path 0 1))
      (name
        "(rule ((edge x y))
      ((path x y))
        :ruleset myrules1 )")
      (premises (Fiat (= (edge 0 1) (edge 0 1))))
      (substitution (x 0) (y 1)))
    (Fiat (= (edge 1 2) (edge 1 2))))
  (substitution (z 2) (x 0) (y 1)))(Rule
  (= (path 0 3) (path 0 3))
  (name
    "(rule ((path x y)
       (edge y z))
      ((path x z))
        :ruleset myrules2 )")
  (premises
    (Rule
      (= (path 0 2) (path 0 2))
      (name
        "(rule ((path x y)
       (edge y z))
      ((path x z))
        :ruleset myrules2 )")
      (premises
        (Rule
          (= (path 0 1) (path 0 1))
          (name
            "(rule ((edge x y))
      ((path x y))
        :ruleset myrules1 )")
          (premises (Fiat (= (edge 0 1) (edge 0 1))))
          (substitution (x 0) (y 1)))
        (Fiat (= (edge 1 2) (edge 1 2))))
      (substitution (z 2) (x 0) (y 1)))
    (Fiat (= (edge 2 3) (edge 2 3))))
  (substitution (z 3) (x 0) (y 2)))(Rule
  (= (path 0 4) (path 0 4))
  (name
    "(rule ((path x y)
       (edge y z))
      ((path x z))
        :ruleset myrules2 )")
  (premises
    (Rule
      (= (path 0 2) (path 0 2))
      (name
        "(rule ((path x y)
       (edge y z))
      ((path x z))
        :ruleset myrules2 )")
      (premises
        (Rule
          (= (path 0 1) (path 0 1))
          (name
            "(rule ((edge x y))
      ((path x y))
        :ruleset myrules1 )")
          (premises (Fiat (= (edge 0 1) (edge 0 1))))
          (substitution (x 0) (y 1)))
        (Fiat (= (edge 1 2) (edge 1 2))))
      (substitution (z 2) (x 0) (y 1)))
    (Fiat (= (edge 2 4) (edge 2 4))))
  (substitution (z 4) (x 0) (y 2)))(Rule
  (= (path 1 2) (path 1 2))
  (name
    "(rule ((edge x y))
      ((path x y))
        :ruleset myrules1 )")
  (premises (Fiat (= (edge 1 2) (edge 1 2))))
  (substitution (x 1) (y 2)))(Rule
  (= (path 1 3) (path 1 3))
  (name
    "(rule ((path x y)
       (edge y z))
      ((path x z))
        :ruleset myrules2 )")
  (premises
    (Rule
      (= (path 1 2) (path 1 2))
      (name
        "(rule ((edge x y))
      ((path x y))
        :ruleset myrules1 )")
      (premises (Fiat (= (edge 1 2) (edge 1 2))))
      (substitution (x 1) (y 2)))
    (Fiat (= (edge 2 3) (edge 2 3))))
  (substitution (z 3) (x 1) (y 2)))(Rule
  (= (path 1 4) (path 1 4))
  (name
    "(rule ((path x y)
       (edge y z))
      ((path x z))
        :ruleset myrules2 )")
  (premises
    (Rule
      (= (path 1 2) (path 1 2))
      (name
        "(rule ((edge x y))
      ((path x y))
        :ruleset myrules1 )")
      (premises (Fiat (= (edge 1 2) (edge 1 2))))
      (substitution (x 1) (y 2)))
    (Fiat (= (edge 2 4) (edge 2 4))))
  (substitution (z 4) (x 1) (y 2)))
